# chatcorelab

./: .env.example  .gitignore  AGENT_STATE.md  CLAUDE.md  index.js  package-lock.json  package.json  render.yaml  strategy.md
.github/workflows/: market_close.yml  market_open.yml  midday.yml  premarket.yml  weekly_review.yml
agent/config/: settings.json
agent/memory/: mock_account.json  positions.json  state.json  trade_stats.json  trades.json
agent/src/: agent.js  executor.js  indicators.js  market.js  memory.js  risk.js  screener.js  signals.js
data/: earnings_calendar.json  sp500_whitelist.json  watchlist.json
memory/: agent_instructions.md  lessons.md  premarket_scores.json  research_log.md  trade_log.md  trading_strategy.md
plataforma/: app.js  index.html  styles.css
routines/: market_close.md  market_open.md  midday_adjustment.md  premarket_research.md  weekly_review.md
scripts/: alpaca_api.js  claude_reasoning.js  clickup_alerts.js  earnings_updater.js  mock_alpaca.js  perplexity_research.js  render_wrapper.sh  reset_mock.js  tavily_research.js  telegram_alerts.js  validate_env.js
video-studio/: .env.example  CLAUDE.md  pyproject.toml
video-studio/compositions/overlays/: lower_third.html  stat_counter.html  subtitles_karaoke.html
video-studio/helpers/: grade.py  pack_transcripts.py  render.py  timeline_view.py  transcribe.py
